clients/gateways/test-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nginx-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /nginx
        backend:
          service:
            name: nginx-service
            port:
              number: 80
        pathType: Prefix
      - path: /jupyter
        backend:
          service:
            name: proxy-api
            port:
              number: 8000
        pathType: Prefix
